<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:paddingBottom="10dp"
    android:clipToPadding="false"
    android:id="@+id/scroll_view">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.example.githubprofileviewer.MainActivity">

        <ImageView
            android:id="@+id/bg_profile"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/bg_binary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.example.githubprofileviewer.utils.HexagonMaskView
            android:id="@+id/img_avatar"
            android:layout_width="@dimen/avatar_size"
            android:layout_height="@dimen/avatar_size"
            android:layout_marginStart="@dimen/avatar_left_margin"
            android:layout_marginTop="60dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/bg_profile" />

        <Button
            android:id="@+id/btn_follow"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginTop="124dp"
            android:text="@string/follow"
            android:textColorHighlight="@android:color/white"
            android:textColor="@android:color/white"
            android:background="@drawable/btn_ripple_left_rounded"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/profile_left_margin"
            android:layout_marginTop="8dp"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/textsize_profile_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_avatar"
            tools:text="Arushi Pant"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/img_person"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_person"
            app:layout_constraintTop_toBottomOf="@id/tv_name"
            app:layout_constraintStart_toStartOf="@id/tv_name"  />

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="arushi26"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/textsize_profile_text"
            android:layout_marginStart="@dimen/icon_label_spacing"
            app:layout_constraintBottom_toBottomOf="@id/img_person"
            app:layout_constraintStart_toEndOf="@id/img_person" />

        <ImageView
            android:id="@+id/img_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_location"
            app:layout_constraintTop_toBottomOf="@id/img_person"
            app:layout_constraintStart_toStartOf="@id/img_person" />

        <TextView
            android:id="@+id/tv_location"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/textsize_profile_text"
            android:layout_marginStart="@dimen/icon_label_spacing"
            app:layout_constraintTop_toTopOf="@id/img_location"
            app:layout_constraintStart_toEndOf="@id/img_location"
            tools:text="Lothlorien" />

        <View
            android:id="@+id/sep_one"
            android:layout_width="@dimen/column_spacing"
            android:layout_height="@dimen/separator_height"
            android:background="@color/colorAccent"
            app:layout_constraintTop_toBottomOf="@id/lbl_followers"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/lbl_followers"
            app:layout_constraintHorizontal_chainStyle="spread_inside"/>

        <TextView
            android:id="@+id/lbl_followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:text="@string/lbl_followers"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/textsize_profile_text"
            app:layout_constraintTop_toBottomOf="@id/tv_location"
            android:layout_marginTop="@dimen/section_spacing"
            app:layout_constraintStart_toEndOf="@id/sep_one"
            app:layout_constraintEnd_toStartOf="@id/sep_two"/>

        <TextView
            android:id="@+id/tv_followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="5679"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/textsize_profile_counts"
            app:layout_constraintTop_toBottomOf="@id/lbl_followers"
            app:layout_constraintStart_toEndOf="@id/lbl_followers"
            app:layout_constraintEnd_toStartOf="@id/lbl_followers" />

        <View
            android:id="@+id/sep_two"
            android:layout_width="@dimen/column_spacing"
            android:layout_height="@dimen/separator_height"
            android:background="@color/colorAccentTwo"
            app:layout_constraintTop_toBottomOf="@id/lbl_following"
            app:layout_constraintStart_toEndOf="@id/lbl_followers"
            app:layout_constraintEnd_toStartOf="@id/lbl_following"/>

        <TextView
            android:id="@+id/lbl_following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:text="@string/lbl_following"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/textsize_profile_text"
            app:layout_constraintBottom_toBottomOf="@id/lbl_followers"
            app:layout_constraintStart_toEndOf="@id/sep_two"
            app:layout_constraintEnd_toStartOf="@id/sep_three"/>

        <TextView
            android:id="@+id/tv_following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="3929"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/textsize_profile_counts"
            app:layout_constraintTop_toBottomOf="@id/lbl_following"
            app:layout_constraintStart_toEndOf="@id/lbl_following"
            app:layout_constraintEnd_toStartOf="@id/lbl_following" />

        <View
            android:id="@+id/sep_three"
            android:layout_width="@dimen/column_spacing"
            android:layout_height="@dimen/separator_height"
            android:background="@color/colorAccent"
            app:layout_constraintTop_toBottomOf="@id/lbl_following"
            app:layout_constraintStart_toEndOf="@id/lbl_following"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/lbl_repos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/profile_right_margin"
            android:text="@string/lbl_repos"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/textsize_profile_text"
            app:layout_constraintBottom_toBottomOf="@+id/tv_username"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_repos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/textsize_profile_text"
            app:layout_constraintBottom_toBottomOf="@+id/lbl_repos"
            app:layout_constraintEnd_toStartOf="@+id/lbl_repos"
            tools:text="829" />

        <include
            layout="@layout/layout_more_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_followers"
            android:layout_marginTop="@dimen/section_spacing"
            android:layout_marginStart="@dimen/profile_left_margin"/>

        <ProgressBar
            android:id="@+id/pb_loading_indicator"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:visibility="invisible"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/img_avatar"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="parent"/>

        <ImageView
            android:id="@+id/bg_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/profile_right_margin"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/circular_bg" />

        <ImageView
            android:id="@+id/img_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/bg_share"
            app:layout_constraintStart_toStartOf="@id/bg_share"
            app:layout_constraintTop_toBottomOf="@id/bg_share"
            app:layout_constraintBottom_toTopOf="@id/bg_share"
            app:srcCompat="@drawable/ic_share" />

        <ImageView
            android:id="@+id/img_hire"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="@id/tv_hire"
            app:layout_constraintEnd_toStartOf="@id/tv_hire"
            app:srcCompat="@drawable/ic_work"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/tv_hire"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/hireable"
            android:textColor="@color/colorAccentTwo"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_follow" />

        <TextView
            android:id="@+id/tv_message"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            tools:text="Error message"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/textsize_profile_subtitle"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/img_avatar"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="parent"
            android:visibility="invisible"/>

    </android.support.constraint.ConstraintLayout>

</ScrollView>